# aniscraper

./: .env_example  Cargo.toml  LICENSE  README.md  diesel.toml
migrations/2024-08-25-190927_hianime/: down.sql  up.sql
src/: env.rs  error.rs  hianime.rs  lib.rs  macros.rs  main.rs  model.rs  proxy.rs  schema.rs  servers.rs  utils.rs
