[package]
name = "ani-rust-scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
dotenvy = "0.15.7"
lazy_static = "1.5.0"
rand = "0.8.5"
reqwest = { version = "0.12.7", features = ["json", "blocking"] }
scraper = "0.20.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
tokio = { version = "1.39.3", features = ["full"] }
