[package]
name = "anirust"
version = "0.1.0"
edition = "2021"

[dependencies]
brotli = "6.0.0"
chrono = "0.4.38"
dotenvy = "0.15.7"
flate2 = "1.0.33"
lazy_static = "1.5.0"
rand = "0.8.5"
regex = "1.10.6"
reqwest = { version = "0.12.7", features = ["json", "blocking"] }
scraper = "0.20.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
tokio = { version = "1.39.3", features = ["full"] }
