[package]
name = "aniscraper"
version = "0.1.0"
edition = "2021"
categories = ["web-programming", "parsing", "parser-implementations", "web-programming::http-client"]
description = "Rust library designed for efficient web scraping and data extraction. It simplifies the process of fetching, parsing, and extracting data from websites."
documentation = "https://github.com/0xSSOMPW/aniscraper/blob/master/README.md"
readme = "README.md"
authors = ["falcon71181"]
keywords = ["web", "anime", "web-scraping", "hianime", "zoro"]
repository = "https://github.com/0xSSOMPW/aniscraper"
license = "MIT"
license-file = "LICENSE"

[lib]
name = "aniscraper"           # The name of the target.
path = "src/lib.rs"    # The source file of the target.

[dependencies]
brotli = "6.0.0"
chrono = "0.4.38"
dotenvy = "0.15.7"
flate2 = "1.0.33"
http-body-util = "0.1.2"
hyper = "1.4.1"
hyper-tls = "0.6.0"
hyper-util = { version = "0.1.8", features = ["full"] }
lazy_static = "1.5.0"
rand = "0.8.5"
regex = "1.10.6"
reqwest = { version = "0.12.7", features = ["json", "blocking"] }
scraper = "0.20.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
tokio = { version = "1.39.3", features = ["full"] }
